[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json-repair-env"
version = "1.0.0"
description = "RL environment for training agents to repair malformed JSON"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "preethamjain275" }
]
keywords = ["json", "data-quality", "llm-reliability", "real-world"]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "jsonschema==4.22.0",
    "httpx==0.27.0",
    "openai==1.30.1",
    "python-dotenv==1.0.1",
    "google-generativeai==0.5.4",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
