[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json-repair-env"
version = "1.0.0"
description = "RL environment for training agents to repair malformed JSON"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "preethamjain275" }
]
keywords = ["json", "data-quality", "llm-reliability", "real-world"]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "jsonschema",
    "httpx",
    "openai",
    "python-dotenv",
    "google-generativeai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
